@@ -1,5 +1,8 @@
 2015-01-07  Karl Berry  <karl@gnu.org>
 
+	* texindex/Makefile.am (ti.pdf, ti.html): new targets,
+	for the literate program.  (Only invoked by hand.)
+
 	* tp/texi2any.pl: hardwire program name in --version,
 	derive name from $0 in --help, to match behavior of coding
 	standards and coreutils, etc.
